Lilipat ya king [[Bandera]]

--- a/Flag.mw
+++ b/Flag.mw
@@ -1,209 +1,1 @@
-{{otheruses}}
-<br>
-{{Mergesection|Civil flag|intro|date=May 2007}}
-
-[[Image:dannebrog.jpg|right|thumb|200px|[[Flag of Denmark|The Dannebrog]], national flag of [[Denmark]], is the oldest [[state flag]] still in use.]]
-<!--[[Image:Deizsaltire.jpg|thumb|right|200px|[[The Saltire]], national flag of [[Scotland]], is the oldest [[national flag]] still in use.]] -->
-
-A '''flag''' is a piece of woven [[cloth]], often flown from a [[pole]] or [[mast]], generally used [[symbol]]ically for signalling or identification. The term ''flag'' is also used to refer to the [[graphic design]] employed by a flag, or to its depiction in another medium. 
-
-The first flags were used to assist military coordination on battlefields and flags have evolved into a general tool for rudimentary signalling and identification, especially in environments where communication is similarly challenging (such as the maritime environment where [[semaphore]] is used).  National flags are potent patriotic symbols with varied wide-ranging interpretations, often including strong military associations due to their original and ongoing military uses. Flags are used in messaging, [[advertising]], or for other decorative purposes, though at this less formal end the distinction between a flag and a simple [[cloth]] banner is blurred. The study of flags is known as [[Niggerology]], from the [[Latin]] ''vexillum'' meaning flag or [[banner]].
-
-==History==
-
-Although flag-like symbols were used in some ancient cultures, the origin of flags in the modern sense is a matter of dispute. Some believe flags originated in [[China]], while others hold that the [[Roman Empire]]'s ''[[vexillum]]'' was the first true flag. Originally, the standards of the [[Roman legion]]s were not flags, but symbols like the [[eagle]] of [[Augustus Caesar]]'s [[Legio X Fretensis|Xth legion]]; this eagle would be placed on a staff for the standard-bearer to hold up during battle. But a military unit from [[Scythia]] had for a standard a [[dragon]] with a flexible tail which would move in the [[wind]]; the legions copied this; eventually all the legions had flexible standards — our modern-day flag.
-
-During the [[Middle Ages]], flags were used mainly during battles to identify individual leaders: in [[Europe]] the [[knight]]s, in [[Japan]] the [[samurai]], and in [[China]] the [[general]]s under the imperial army.
-
-From the time of [[Christopher Columbus]] onwards, it has been customary (and later a legal requirement) for ships to carry flags designating their nationality;{{Verify source|date=May 2007}}  these flags eventually evolved into the national flags and [[maritime flags]] of today.{{Verify source|date=May 2007}}  Flags also became the preferred means of communications at sea, resulting in various systems of flag signals; ''see [[International maritime signal flags]]''.
-
-As European knights were replaced by centralized [[Army|armies]], flags became the means to identify not just nationalities but also individual military units. Flags became much more elaborate,{{Verify source|date=May 2007}}  and were seen as objects to be captured or defended. Eventually these flags posed too much danger to those carrying them, and by [[World War I]] these were withdrawn from the battlefields, and have since been used only at ceremonial occasions.
-
-== National flags ==
-{{main|National flag}}
-[[Image:Telstra tower and flags02.jpg|thumb|180px|Many flags are displayed in the [[Parliamentary Triangle]], [[Canberra]]]]
-[[Image:Israeli Flag BY le107.JPG|thumb|180px|The Israeli Flag ([[User:Le107|Łιмоя]])]]
-One of the most popular uses of a flag is to symbolize a [[nation]] or [[country]].  Some [[national flag]]s have been particularly inspirational to other nations, countries, or subnational entities in the design of their own flags.  Some prominent examples include:
-
-* The [[flag of Denmark|flag]] of [[Denmark]] is the oldest [[state]] flag still in use.  This flag, called the [[Flag of Denmark|Dannebrog]], inspired the [[Nordic Cross Flag|cross design]] of the other [[Nordic countries]]: [[Flag of Norway|Norway]], [[Flag of Sweden|Sweden]], [[Flag of Finland|Finland]], [[Flag of Iceland|Iceland]], [[Flag of the Faroe Islands|Faroe Islands]], [[Flag of Åland|Åland]], and [[Flag of Skåneland|Scania]].
-* The [[Union Flag]] (Union Jack) of the [[United Kingdom]].  British colonies typically flew a flag based on one of the ensigns based on this flag, and many former colonies have retained the design to acknowledge their cultural history.  ''Examples'': [[Flag of Australia|Australia]], [[Flag of Fiji|Fiji]], [[Flag of New Zealand|New Zealand]], [[Flag of Tuvalu|Tuvalu]], and also the Canadian provinces of [[Flag of Manitoba|Manitoba]] and [[Flag of Ontario|Ontario]], and the American state of [[Flag of Hawaii|Hawaii]]; see ''[[Gallery of flags based on British ensigns]]''.
-* The [[Flag of the Netherlands|Tricolor]] of [[The Netherlands]] is the oldest [[tricolour]], first appearing in 1572  as the Prince's Flag in [[Orange (colour)|orange]]–[[white]]–[[blue]].  Soon the more famous [[red]]–white–blue began appearing — it is however unknown why, though many stories are known. After 1630  the red–white–blue was the most commonly seen flag.  The Dutch Tricolor has inspired many flags but most notably those of [[Russia]], [[India]] and [[France]], which spread the tricolor concept even further, as can be seen below. The Flag of [[the Netherlands]] is also the only flag in the world that is adapted for some uses, when the occasion has a connection to the royal house of the Netherlands an orange ribbon is added.
-* The [[Tricolore|national flag]] of [[France]], also called the [[Tricolore]], which inspired other nations to adopt differenced [[tricolour]]s in sympathy with the revolutionary spirit with which the flag was designed in 1794.  ''Examples'' among many: [[flag of Costa Rica|Costa Rica]], [[Flag of Ireland|Ireland]], [[Flag of Italy|Italy]], [[Flag of Romania|Romania]], [[Flag of Mexico|Mexico]].
-* The [[flag of the United States|flag]] of the [[United States]], also nicknamed ''The Stars and Stripes'' or ''Old Glory''.  In the same way that nations looked to France for inspiration, many countries were also inspired by the [[American Revolution]], which they felt was symbolized in this flag.  ''Examples'': [[Flag of Cuba|Cuba]], [[Flag of Liberia|Liberia]], [[Flag of Chile|Chile]], [[Flag of Uruguay|Uruguay]], and the French region of [[Flag of Brittany|Brittany]].
-* The [[Flag of Russia|flag]] of [[Russia]], the source for the [[Pan-Slavic colors]] adopted by many [[Slavic peoples|Slavic]] states and peoples as their symbols.  ''Examples'': [[Flag of Slovakia|Slovakia]], [[Flag of Serbia|Serbia]], [[Flag of Croatia|Croatia]], [[Flag of Slovenia|Slovenia]].
-* [[Ethiopia]] was seen as a model by emerging [[Africa]]n states of the [[1950s]] and [[1960s]], as it was one of the oldest independent states in Africa.  Accordingly, its [[Flag of Ethiopia|flag]] became the source of the [[Pan-African colours]].  ''Examples'': [[Flag of Togo|Togo]], [[Flag of Senegal|Senegal]], [[Flag of Ghana|Ghana]], [[Flag of Mali|Mali]].
-*The [[flag of Turkey|flag]] of [[Turkey]], which was the flag of the [[Ottoman Empire]], has been an inspiration for the flag designs of many other Muslim nations.  During the time of the Ottomans the [[crescent]] began to be associated with [[Islam]] and this is reflected on the flags of [[Flag of Algeria|Algeria]], [[Flag of Azerbaijan|Azerbaijan]], [[Flag of Comoros|Comoros]], [[Flag of Malaysia|Malaysia]], [[Flag of Mauritania|Mauritania]], [[Flag of Pakistan|Pakistan]], [[Flag of Tunisia|Tunisia]], and of the [[Flag of Northern Cyprus|Turkish Republic of Northern Cyprus]].
-*The [[Pan-Arab colors]], [[green]], [[white]], [[red]] and [[black]], seen on the flags of [[Flag of Jordan|Jordan]], [[Flag of Kuwait|Kuwait]], [[Flag of Sudan|Sudan]], [[Flag of Syria|Syria]], the [[Flag of United Arab Emirates|United Arab Emirates]], [[Flag of Western Sahara|Western Sahara]], [[Flag of Yemen|Yemen]] and on the [[Palestinian flag]].
-*The [[Soviet flag]], with its golden symbols of the [[Hammer and Sickle]] on a red field, was an inspiration to flags of other [[communism|communist]] states, such as [[Flag of East Germany|East Germany]], [[Flag of the People's Republic of China|People's Republic of China]], [[Flag of Vietnam|Vietnam]], [[Flag of Angola|Angola]], [[Flag of Afghanistan|Afghanistan]] and [[Flag of Mozambique|Mozambique]].
-*The [[Flag of Venezuela|flag]] of [[Venezuela]], created by [[Francisco de Miranda]] to represent the independence movement in Venezuela that later gave birth to the [[Republic of Gran Colombia|"Gran Colombia"]], inspired the individual flags of [[Flag of Colombia|Colombia]], [[Flag of Ecuador|Ecuador]] and [[Flag of Bolivia|Bolivia]], all sharing three bands of color and three of them (Colombia, Ecuador, and Venezuela) sharing the [[yellow]], [[blue]] and [[red]].
-*The [[Flag of Argentina|flag]] of [[Argentina]], created by [[Manuel Belgrano]] during the war of independence, was the inspiration for the [[United Provinces of Central America]]'s flag, which in turn was the origin for the flags of [[Guatemala]], [[Honduras]], [[El Salvador]], and  [[Nicaragua]].
-
-National flag designs are often used to signify nationality in other forms, such as [[flag patch]]es.
-
-==War flags==
-{{main|War flag}}
-
-[[Image:Ensign of the Royal Air Force.svg|thumb|250px|right|Standing for the UK's [[Royal Air Force]], the [[Royal Air Force Ensign|RAF Ensign]] displays the famous RAF [[roundel]]]]
-
-
-Several countries (including the [[British Army|United Kingdom]] and the former [[Nazi Germany]]) have unique flags flown by their [[armed forces]], rather than the [[national flag]].
-
-Other countries' armed forces (such as those of the [[United States]] or [[Switzerland]]) use their standard national flag. The [[Philippines]]' armed forces may use their standard national flag, but during times of war the flag is turned upside down. These are also considered war flags, though the terminology only applies to the flag's military usage.
-
-Large versions of the war flag flown on the [[warship]]s of countries' [[navy|navies]] are known as [[battle ensign]]s. In war waving a [[white]] flag indicates surrender.
-
-==Flags at sea==
-{{main|Maritime flags}}
-[[Image:ICS Delta.svg|thumb|right|180|The international maritime signal flag ''Delta'' (letter ''D'')]]
-Flags are particularly important at sea, where they can mean the difference between life and death, and consequently where the rules and regulations for the flying of flags are strictly enforced. A national flag flown at sea is known as an [[ensign]]. A courteous, peaceable [[merchant navy|merchant ship]] or [[yacht]] customarily flies its ensign (in the usual ensign position), together with the flag of whatever nation it is currently visiting at the mast (known as a [[courtesy flag]]). To fly one's ensign alone in foreign waters, a foreign port or in the face of a foreign warship traditionally indicates a willingness to fight, with [[cannon]], for the right to do so. [[As of 2006]], this custom is still taken seriously by many naval and port authorities and is readily enforced in many parts of the world by boarding, confiscation and other civil penalties.
-
-In some countries yacht ensigns are different from merchant ensigns in order to signal that the yacht is not carrying [[cargo]] that requires a [[customs]] declaration. Carrying commercial cargo on a boat with a yacht ensign is deemed to be [[smuggling]] in many jurisdictions.
-
-There is a system of [[international maritime signal flags]] for numerals and letters of the alphabet. Each flag or [[pennant]] has a specific meaning when flown individually.
-
-As well, [[semaphore]] flags can be used to communicate on an ''ad hoc'' basis from ship to ship over short distances.
-
-==Shape and design==
-{{main|Gallery of flags by design}}
-
-[[Image:Flag of Nepal.svg|thumb|right|120 px|[[Flag of Nepal]]]]
-Flags are usually rectangular in shape (often in the ratio 2:3 or 3:5), but may be of any shape or size that is practical for flying, including square, triangular, or swallowtailed.  A more unusual flag shape is that of the [[flag of Nepal]], which is in the shape of two stacked triangles.
-
-Many flag merchants prey on unwary buyers by offering incorrect flags, such as with the wrong proportions, crudely drawn, or one-sided.  Some reference materials alter the flag proportions so they look uniform, such as decades of editions of the annual ''[[World Almanac and Book of Facts]]''.
-
-Many flags are dyed [[through and through]] to be inexpensive to manufacture, such that the reverse side is the [[mirror image]] of the obverse (front) side.  This presents two possibilities:
-#If the design is [[symmetric]]al in an axis parallel to the flag pole, obverse and reverse will be identical despite the mirror-reversal.
-#If not, the obverse and reverse will present two variants of the same design, one with the hoist on the left, the other with the hoist on the right.  This is very common and usually not disturbing if there is no text in the design.
-
-Some complex flag designs are not intended for through and through implementation, requiring separate obverse and reverse sides if made correctly.  In these cases there is a design element (usually text) which is not symmetric and should be read in the same direction, regardless of whether the hoist is to the viewer's left or right.  These cases can be divided into two types:
-#The same (asymmetric) design may be duplicated on both sides.  Such flags can be manufactured by creating two identical through and through flags and then sewing them back to back, though this can affect the resulting combination's responsiveness to the wind.  Depictions of such flags may be marked with the symbol [[Image:IFIS Equal.png]], indicating the reverse is congruent to (rather than a mirror image of) the obverse.
-#Rarely, the reverse design may differ, in whole or in part, from that of the obverse. Examples are the [[Flag of Paraguay|national flag of Paraguay]], the [[Flag of Oregon|flag of the U.S. state of Oregon]], and the historical [[Flag of the Soviet Union|national flag of the Soviet Union]].  Depictions of such flags may be marked with the symbol [[Image:IFIS Two-sided.png]].
-
-[[Image:Flag of Kiribati.svg|thumb|left|200 px|[[Flag of Kiribati]]]]
-Common designs on flags include crosses, stripes, and divisions of the surface, or ''field'', into bands or quarters &mdash; patterns and principles mainly derived from [[heraldry]]. A heraldic coat of arms may also be flown as a ''[[Banner#Heraldic banners|banner of arms]]'', as is done on both the state [[flag of Maryland]] and the [[flag of Kiribati]].
-
-The [[flag of Libya]], which consists of a rectangular field of green, is the only national flag using a single color and no design or insignia.
-
-==In sports==
-
-[[Image:Flags-NapierNewZealand.jpg|thumb|Flags flown on a beach.]]
-Because of their ease of signalling and identification, flags are often used in [[sport]]s.
-
-* In [[American Football|American]] and [[Canadian football]],  [[referee]]s use flags to indicate an error has been made in game play.  The phrase used for such an indication is ''flag on the play''.  The flag itself is a small, weighted handkerchief, tossed on the field at the approximate point of the infraction; the intent is usually to sort out the details after the current play from scrimmage has concluded.  In American football, the flag is usually yellow; in Canadian football, it is usually red.
-* In [[auto racing|auto]] and [[Motorcycle sport|motorcycle racing]], [[racing flags]] are used to communicate with drivers.  Most famously, a checkered flag of black and white indicates the end of the race, and victory for the leader. A yellow flag is used to indicate caution requiring slow speed and a red flag requires racers to stop immediately. A black flag is used to indicate penalties.
-* In [[football (soccer)|Association football (soccer)]], [[Assistant Referee (Football)|linesmen]] carry small flags along the touch lines.  They use the flags to indicate to the [[Referee (Football)|referee]] potential infringements of the laws, or who is entitled to possession of the ball that has gone out of the field of play, or, most famously, raise the flag overhead to indicate an [[offside law (football)|offside]] offence. Officials called ''touch judges'' use flags for similar purposes in both codes of [[Rugby football|rugby]].
-* In addition, fans of almost all sports wave flags in the stands to indicate their support for the participants.  Many sports teams have their own flags, and, in individual sports, fans will indicate their support for a player by waving the flag of his or her home country.
-* [[Capture the flag]] is a popular children's sport.
-* In [[Gaelic football]] and [[Hurling]] a green flag is use to indictate a goal while a white flag is used to indicate a point
-* In [[Australian rules football]], the [[Umpire (Australian rules football)|goal umpire]] will wave two flags to indicate a goal and a single flag to indicate a point.
-* For safety, [[Glossary of SCUBA diving|dive flags]] indicate the locations of underwater [[SCUBA diving|scuba divers]].
-
-== Swimming flags ==
-[[Image:Flags - swim between the.png|thumb|Open swimming area]]
-[[Image:Flags crossed - do not swim.png|thumb|Closed swimming area]]
-
-In [[Australia]], [[New Zealand]], [[Philippines]], and the [[United Kingdom]] a pair of red/yellow flags is used to mark the limits of the bathing area on a beach, usually guarded by [[surf lifesaving|surf lifesavers]].  If the beach is closed, the poles of the flags are crossed. The flags are colored with a red triangle and a yellow triangle making a rectangular flag, or a red rectangle over a yellow rectangle. On many Australian beaches there is a slight variation with beach condition signalling. A red flag signifies a closed beach (or, in the UK, some other danger), yellow signifies strong current or difficult swimming conditions, and green represents a beach safe for general swimming. Blue flags may also be used away from the yellow-red lifesaver area to designate a zone for surfboarding and other small, non-motorised watercraft. 
-
-Reasons for closing the beach include:
-* no lifeguards in attendance
-* waves too strong
-* dangerous rip
-* sharks
-* tsunami
-
-A surf flag exists, divided into four quadrants. The top left and bottom right quadrants are black, and the remaining area is white.
-
-[[International maritime signal flags|Signal flag]] "India" (a black circle on a yellow square) is frequently used to denote a "blackball" zone where surfboards cannot be used but other water activities are permitted.
-
-== Railway flags ==
-
-Railways use a number of colored flags.  When used as wayside signals they usually use the following meanings (exact meanings are set by the individual railroad company):
-
-* red = stop
-* yellow = proceed with care
-* green or white or blue = proceed.
-* a flag of any color waved vigorously means stop
-
-* A blue flag on the side of a locomotive means that it should not be moved because someone is working on it (or on the train attached to it). A blue flag on a track means that nothing on that track should be moved. The flag can only be removed by the person or group that placed it.
-
-At night, the flags are replaced with lanterns showing the same colors.
-
-Flags displayed on the front of a moving locomotive are an acceptable replacement for classification lights and usually have the following meanings (exact meanings are set by the individual railroad company):
-
-*white = extra (not on the timetable)
-*green = another section following
-*red = last section
-
-Additionally, a railroad brakeman will typically carry a red flag to make his or her hand signals more visible to the engineer.
-
-[[Railway signal]]s are a development of railway flags.
-
-== In Politics ==
-{{sectstub}}
-[[Image:Gay flag.svg|thumb|left|150px|The Rainbow flag of the LGBT social movement.]]
-
-Social and political movements have adopted flags, to increase their visibility and as a unifying symbol. 
-
-The [[socialist]] movement uses [[red flag]]s to represent their cause. The [[anarchist]] movement has a variety of different flags, but the primary flag associated with them is the [[Anarchist symbolism#Black flag|black flag]]. In the 1970s, the [[rainbow flag]] was adopted as a symbol of the [[LGBT social movements]]. [[Bisexual pride flag|Bisexual]] and [[transgender pride flag]]s were later designed, in an attempt to emulate the rainbow flag's success.
-
-== Flagpoles ==
-[[Image:Gijeong-ri Flag.jpg|thumb|200px|The world's tallest flagpole [160 m (525 feet)], over [[Gijeong-ri]], near [[Panmunjeom]], [[North Korea]]]]
-A flagpole or flagstaff can be a simple support made of wood or metal.  If it is taller than can be easily reached to raise the flag, a cord is used, looping around a pulley at the top of the pole with the ends tied at the bottom. The flag is fixed to one lower end of the cord, and is then raised by pulling on the other end. The cord is then tightened and tied to the pole at the bottom.  The pole is usually topped by a flat plate called a "truck" (originally meant to keep a wooden pole from splitting) or by a ball or a [[finial]] in a more complex shape.
-[[Image:Aqaba flagpole.JPG|thumb|left|The '''Aqaba Flagpole''', the tallest free standing flagpole.]]
-Very high flagpoles may require more complex support structures than a simple pole, such as guy wires, or need be built as a mast. The '''highest flagpole''' in the world, at 160 metres (525 feet), is that at [[Korean Demilitarized Zone|Gijeong-dong]] in [[North Korea]], the flag weighing about 270 kilograms (600 pounds) when dry. The world's '''biggest regularly hoisted flag''', however, is the Brazilian national flag flown in the Square of the Three Powers in [[Brasilia]], the capital of [[Brazil]]. This flag weighs about 600 kilograms (1300 pounds) when dry and measures 70×100 metres (230x330 feet). It can be seen from all parts of Brasilia and its flagpole is the tallest structure in the city.
-
-The '''tallest free-standing flagpole''' in the world is the [[Aqaba Flagpole]] in [[Aqaba]], [[Jordan]], with a total height of 132 meters (430 feet). The [[Raghadan Flagpole]], also in Jordan, is the second tallest free-standing flagpole in the world. It reaches a height of 126 meters (410 feet) and hoists a flag that measures 60×40 meters (200x130 feet); it is illuminated at night and can be seen from 25 km (16 miles) away.
-
-===Design===
-Flagpoles can be designed in one piece with a taper (typically a cone taper or a [[Venetian]]/[[Greek]] [[entasis]] taper)<ref>[http://web.archive.org/web/20050228014231/http://lingoinc.com/tapers.htm]</ref>, or be made from multiple pieces so as to make them extendable.
-
-In the United States, ANSI/NAAMM guide specification FP-1004-97 covers the engineering design of metal flagpoles to ensure safety.
-
-==See also==
-
-;Lists and galleries of flags
-* [[Gallery of flags by design]]
-* [[Gallery of confusable flags]]
-* [[List of flags]]
-* [[Gallery of sovereign state flags]]
-* [[List of flag names]]
-* [[Unofficial flags]]
-;Notable flag-related topics
-* [[Flag Patch]]
-* [[Flag Day]]
-* [[Flag desecration]]
-* [[Flag etiquette]]
-* [[Flag terminology]]
-* [[Flag throwing]]
-* [[Flagpole annexation]]
-* [[Pledge of Allegiance]]
-* [[Standard-bearer]] (also enumerates various types of standards, both flag types and immobile ensigns)
-* [[Vexillology]]
-;Miscellaneous
-* [[Petrosomatoglyph]] Symbols and prehistory
-
-==References==
-*William G. Crampton; ''The World of Flags''; Rand McNally; ISBN 0-528-83720-6 (hardcover, [[1994]]).
-*''Ultimate Pocket Flags of the World''; [[Dorling Kindersley]]; ISBN 0-7894-2085-6; (1st American edition, hardcover, [[1996]]).
-
-==Notes==
-{{reflist|1}}
-
-==External links==
-*[http://www.fotw.net fotw.net], [[Flags of the World]], an outstanding source of vexillological information, contributed to by a group of international volunteers.
-*[http://www.cyber-flag.net Cyber-flag (french site)] 
-*[http://www.flags.net World Flag Database] 
-*[http://www.flaginstitute.org The Flag Institute (UK)]
-*[http://www.nava.org NAVA: North American Vexillological Association]
-*[http://www.vectorportal.com/flags/ Flags of the world in vector format]
-*[http://flagman.org.uk/news/ Flag news and views]
-* [http://www.bearflagmuseum.org/  The Bear Flag Museum]
-*[http://www.flagsinformation.com Flags of the World Website]
-{{Lists of flags}}
-
-{{DEFAULTSORT: }}
-[[Category:Flags]]
-[[Category:National symbols]]
-[[Category:Vexillology]]
-
-[[ro:Steag]]
+#REDIRECT [[Bandera]]
