*Empty MediaWiki Message*

--- a/Template:Bandera2.mw
+++ b/Template:Bandera2.mw
@@ -1,1 +1,1 @@
-[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}<includeonly>{{#ifeq:{{NAMESPACE}}|{{ns:10}}|[[Category:Templates keng banderang|{{PAGENAME}}]]</includeonly><noinclude>[[Category:Templates keng banderang| ]]</noinclude>
+[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}<includeonly>{{#ifeq:{{NAMESPACE}}|{{ns:10}}|[[Category:Templates keng banderang|{{PAGENAME}}]]}}</includeonly><noinclude>[[Category:Templates keng banderang| ]]</noinclude>
