--- a/Template:BEN.mw
+++ b/Template:BEN.mw
@@ -1,2 +1,1 @@
-{{country|flagcountry|Benin}}<noinclude>{{Protected template}}[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Benin}}
