*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -19,10 +19,10 @@
 |BEN|Benin                  = [[Benin]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
+|BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BER|Bermuda = [[Bermuda]]
 |BIH|Bosnia and Herzegovina = [[Bosnia and Herzegovina]]
 |BHR|Bahrain = [[Bahrain]]
 |BJE|Belarus = [[Belarus]]
