*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -19,10 +19,10 @@
 |BEN|Benin                  = Flag of Benin.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
+|BMU|BER|Bermuda            = Flag of Bermuda.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BER|Bermuda = Flag of Bermuda.svg
 |BIH|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
 |BHR|Bahrain = Flag of Bahrain.svg
 |BJE|Belarus = Flag of Belarus.svg
