--- a/University_of_the_East.mw
+++ b/University_of_the_East.mw
@@ -36,7 +36,7 @@ Pigkalubanan da lang Level II status ning Philippine Association of Colleges and
 Accrediting Agency of Schools, Colleges and Universities (PAASCU)]]. Atin yang level II accreditation ing College of Medicine has level II accreditation ampong Innovative Curriculum, at mekilala yang Center of Excellence in Research (Sentru ning Kabiasnan king Pamanialiksik) ning Department of Science and Technology. Ita namang College of Nursing, atin yang level III accreditation king Commission on Higher Education as Centers of Excellence.
 
 ==Amlat==
-[[Image:UE Manila recto2.jpg|left|thumb|190px|Ing Francisco Dalupan Sr. Building king C.M. Recto, Menila. Mitikdo ya aniang 1969]]
+[[Image:UE Manila Recto Avenue.jpg|left|thumb|190px|Ing Francisco Dalupan Sr. Building king C.M. Recto, Menila. Mitikdo ya aniang 1969]]
 
 Miraras king Setiembre [[1946]] ing amlat ning '''University of the East''', king metung a kuartung upahan king Dasmariñas St., [[Menila]], nung nu la makalista kareng ) review class para king Certified Public Accountant (CPA) deng 110 a magaral. Kapakayan ning grupu da reng talaturu king comerciu, a panimunan nang '''[[Francisco T. Dalupan, Sr.|Dr. Francisco T. Dalupan, Sr.]]''', Ing manimuna kareng talaturu king comerciu, ing pamaniaup king bangsa, a e pa mibangun king gera. Karetang 110 a estudianting deta, apat la reng kayabe karetang matas dili king 1947 CPA board Examinations. <ref>{{cite news|title = University of the East: Nearly 60 years of quality education for the masses|publisher = [[Manila Bulletin]]| url = http://www.mb.com.ph/issues/2004/07/30/SCAU2004073015212.html|accessdate = 2006-09-20}}</ref>  
 
