Removing "Deepak_Chopra_MSPAC.jpg", it has been deleted from Commons by [[commons:User:INeverCry|INeverCry]] because: per [[:c:Commons:Deletion requests/File:Deepak Chopra MSPAC.jpg|]].

--- a/Deepak_Chopra.mw
+++ b/Deepak_Chopra.mw
@@ -1,6 +1,6 @@
 {{Infobox person
 | name       = Deepak Chopra
-| image      = Deepak_Chopra_MSPAC.jpg
+| image      =
 | image_size  = 
 | caption     = I Chopra a magsalita king Microsoft [[Political action committee|PAC]] anyang Enero 15, 2011
 | birth_place = [[New Delhi]], [[British Raj|British India]]
