Miurung la reng in-edit nang [[Special:Contributions/72.27.89.30|72.27.89.30]] ([[User talk:72.27.89.30|Pamisabi-sabi]]); binalik neng [[User:Leeheonjin|Leeheonjin]] king tauling bersion

--- a/Wikipedia:Embahada.mw
+++ b/Wikipedia:Embahada.mw
@@ -10,7 +10,7 @@ Ing [[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers]] magpalagwa yan
 [[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers]] provides communication possibility with other users in other languages than Kapampangan.
 
 
-==Embassy Staff ・ Deng ……8885Embahador==
+==Embassy Staff ・ Deng Embahador==
 Ini ing talaan da reng aktibong embahador king Kapampangan Wikipedia. Nung bisa kayung sumaup, pakilista mu la king lalam reng lagyu yu ampong amanung gagamitan mu.
 
 This is a list of ambassadors who are active on Kapampangan Wikipedia. If you would like to offer some help, please feel free to add your name and the languages you speak to the list.
