*Empty MediaWiki Message*

--- a/Template:BIH.mw
+++ b/Template:BIH.mw
@@ -1,3 +1,1 @@
-{{country|flagcountry|Bosnia and Herzegovina}}<noinclude>
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Bosnia at Herzegovina}}
