*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -19,11 +19,11 @@
 |BEN|Benin                  = [[Benin]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
+|BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BIH|Bosnia and Herzegovina = [[Bosnia and Herzegovina]]
 |BHR|Bahrain = [[Bahrain]]
 |BJE|Belarus = [[Belarus]]
 |BLZ|Belize = [[Belize]]
