*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -19,12 +19,12 @@
 |BEN|Benin                  = [[Benin]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
+|BHR|Barein|Bahrain         = [[Bahrain]]
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BHR|Bahrain = [[Bahrain]]
 |BJE|Belarus = [[Belarus]]
 |BLZ|Belize = [[Belize]]
 |BOC|Botswana = [[Botswana]]
