*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -21,11 +21,11 @@
 |BHS|BAH|Bahamas            = [[Bahamas]]
 |BHR|Barein|Bahrain         = [[Bahrain]]
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
+|BLR|Bielorusya|Belarus     = [[Belarus]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BJE|Belarus = [[Belarus]]
 |BLZ|Belize = [[Belize]]
 |BOC|Botswana = [[Botswana]]
 |BOL|Bolivia = [[Bolivia]]
