*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -1,5 +1,5 @@
 {{#switch:{{{1|}}}
-<!-- ISO code | FIFA code | kampampangan name | English name -->
+<!-- ISO code | FIFA code | Kampampangan name | English name -->
 |ABW|ARU|Aruba              = Flag of Aruba.svg
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
 |AGO|ANG|Angola             = Flag of Angola.svg
@@ -18,14 +18,14 @@
 |BEL|Belgika|Belgium        = Flag of Belgium.svg
 |BEN|Benin                  = Flag of Benin.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
-|BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |BHR|Barein|Bahrain         = Flag of Bahrain.svg
+|BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
+|BLR|Bielorusya|Belarus     = Flag of Belarus.svg
 |BMU|BER|Bermuda            = Flag of Bermuda.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BJE|Belarus = Flag of Belarus.svg
 |BLZ|Belize = Flag of Belize.svg
 |BOC|Botswana = Flag of Botswana.svg
 |BOL|Bolivia = Flag of Bolivia.svg
