*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -21,7 +21,7 @@
 |BHS|BAH|Bahamas            = [[Bahamas]]
 |BHR|Barein|Bahrain         = [[Bahrain]]
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
-|BLR|Bielorusya|Belarus     = [[Belarus]]
+|BLR|Bielorusya|Belarus     = [[Bielorusya]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
