*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -18,15 +18,15 @@
 |BEL|Belgika|Belgium        = [[Belgika]]
 |BEN|Benin                  = [[Benin]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
-|BHS|BAH|Bahamas            = [[Bahamas]]
 |BHR|Barein|Bahrain         = [[Bahrain]]
+|BHS|BAH|Bahamas            = [[Bahamas]]
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
 |BLR|Bielorusya|Belarus     = [[Bielorusya]]
+|BLZ|BIZ|Belize             = [[Belize]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BLZ|Belize = [[Belize]]
 |BOC|Botswana = [[Botswana]]
 |BOL|Bolivia = [[Bolivia]]
 |BRA|Brazil = [[Brazil]]
