*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -22,11 +22,11 @@
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
 |BLR|Bielorusya|Belarus     = Flag of Belarus.svg
+|BLZ|BIZ|Belize             = Flag of Belize.svg
 |BMU|BER|Bermuda            = Flag of Bermuda.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BLZ|Belize = Flag of Belize.svg
 |BOC|Botswana = Flag of Botswana.svg
 |BOL|Bolivia = Flag of Bolivia.svg
 |BRA|Brazil = Flag of Brazil.svg
