*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -25,9 +25,9 @@
 |BLZ|BIZ|Belize             = [[Belize]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BRB|BAR|Barbados           = [[Barbados]]
+|BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BOC|Botswana = [[Botswana]]
 |BOL|Bolivia = [[Bolivia]]
 |BRA|Brazil = [[Brazil]]
 |BRIT DJEV|British Virgin Islands = [[British Virgin Islands]]
