*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -25,9 +25,9 @@
 |BLZ|BIZ|Belize             = Flag of Belize.svg
 |BMU|BER|Bermuda            = Flag of Bermuda.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
+|BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BOC|Botswana = Flag of Botswana.svg
 |BOL|Bolivia = Flag of Bolivia.svg
 |BRA|Brazil = Flag of Brazil.svg
 |BRIT DJEV|British Virgin Islands = Flag of the British Virgin Islands.svg
