--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -25,11 +25,11 @@
 |BLZ|BIZ|Belize             = [[Belize]]
 |BMU|BER|Bermuda            = [[Bermuda]]
 |BOL|Bolivia                = [[Bolivia]]
+|BRA|Brasil|Brazil          = [[Brasil]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BRA|Brazil = [[Brazil]]
 |BRU|Brunei = [[Brunei]]
 |BUF|Burkina Faso = [[Burkina Faso]]
 |BUG|Bulgaria = [[Bulgaria]]
