*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -25,12 +25,11 @@
 |BLZ|BIZ|Belize             = Flag of Belize.svg
 |BMU|BER|Bermuda            = Flag of Bermuda.svg
 |BOL|Bolivia                = Flag of Bolivia.svg
+|BRA|Brasil|Brazil          = Flag of Brazil.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BRA|Brazil = Flag of Brazil.svg
-|BRIT DJEV|British Virgin Islands = Flag of the British Virgin Islands.svg
 |BRU|Brunei = Flag of Brunei.svg
 |BUF|Burkina Faso = Flag of Burkina Faso.svg
 |BUG|Bulgaria = Flag of Bulgaria.svg
