*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -27,10 +27,10 @@
 |BOL|Bolivia                = [[Bolivia]]
 |BRA|Brasil|Brazil          = [[Brasil]]
 |BRB|BAR|Barbados           = [[Barbados]]
+|BRN|BRU|Brunei             = [[Brunei]]
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BRU|Brunei = [[Brunei]]
 |BUF|Burkina Faso = [[Burkina Faso]]
 |BUG|Bulgaria = [[Bulgaria]]
 |BUR|Burundi = [[Burundi]]
