*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -27,10 +27,10 @@
 |BOL|Bolivia                = Flag of Bolivia.svg
 |BRA|Brasil|Brazil          = Flag of Brazil.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
+|BRN|BRU|Brunei             = Flag of Brunei.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BRU|Brunei = Flag of Brunei.svg
 |BUF|Burkina Faso = Flag of Burkina Faso.svg
 |BUG|Bulgaria = Flag of Bulgaria.svg
 |BUR|Burundi = Flag of Burundi.svg
