--- a/Template:Bandera2.mw
+++ b/Template:Bandera2.mw
@@ -1,1 +1,1 @@
-[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}<includeonly>{{#ifeq:{{PAGENAME}}|{{uc:{{PAGENAME}}}}|[[Category:Templates ding banderang|{{PAGENAME}}]]}}</includeonly><noinclude>[[Category:Templates ding banderang| ]]</noinclude>
+[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}<includeonly>{{#ifeq:{{PAGENAME}}|{{uc:{{PAGENAME}}}}|[[Category:Templates ning banderang|{{PAGENAME}}]]}}</includeonly><noinclude>[[Category:Templates ning banderang| ]]</noinclude>
