*Empty MediaWiki Message*

--- a/Template:BFA.mw
+++ b/Template:BFA.mw
@@ -1,4 +1,1 @@
-{{country|flagcountry|Burkina Faso}}<noinclude>
-{{Protected template}}
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Burkina Faso}}
