*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -17,6 +17,7 @@
 |AZE|Azerbaijan             = [[Azerbaijan]]
 |BEL|Belgika|Belgium        = [[Belgika]]
 |BEN|Benin                  = [[Benin]]
+|BFA|BUR|Burkina Faso       = [[Burkina Faso]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHR|Barein|Bahrain         = [[Bahrain]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
@@ -31,7 +32,6 @@
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BUF|Burkina Faso = [[Burkina Faso]]
 |BUG|Bulgaria = [[Bulgaria]]
 |BUR|Burundi = [[Burundi]]
 |BUT|Bhutan = [[Bhutan]]
