*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -17,6 +17,7 @@
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
 |BEL|Belgika|Belgium        = Flag of Belgium.svg
 |BEN|Benin                  = Flag of Benin.svg
+|BFA|BUR|Burkina Faso       = Flag of Burkina Faso.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
 |BHR|Barein|Bahrain         = Flag of Bahrain.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
@@ -31,7 +32,6 @@
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BUF|Burkina Faso = Flag of Burkina Faso.svg
 |BUG|Bulgaria = Flag of Bulgaria.svg
 |BUR|Burundi = Flag of Burundi.svg
 |BUT|Bhutan = Flag of Bhutan.svg
